# DVASm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEEP_OPTIMIZATION_PLAN.md  Makefile  Phase.txt  README.md  bandit-report.json  justfile  llms.txt  mypy.ini  pyproject.toml  pytest.ini  unit_out.txt  unit_out2.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_aiter_frames.py  perf_benchmark.py
docs/: INDEX.md
docs/_machine/: bugs.yaml  status.yaml  tech-debt.yaml
docs/architecture/: constitution.md  top-level-design.md
docs/changelog/: CHANGELOG.md
docs/operations/: cheatsheet.md
docs/subsystems/: 01-data.md  02-teacher.md  03-student.md  04-pipeline.md  05-evaluation.md  06-export.md  07-api.md  08-routing.md  09-quality.md  10-explainability.md  10-lineage.md  11-monitoring.md  11-prompts.md  12-security.md  13-prompts.md  14-deployment.md  14-world-model.md  15-infrastructure.md  16-governance.md
examples/: annotate_epic.py  create_mini_dataset.py  download_epic.py  eval_teacher_vs_student.py  export_training.py  train_dryrun.py  train_student_dpo.py  train_student_sft.py
outputs/dryrun/: test_data.jsonl
outputs/dryrun/final/: adapter_config.json
scripts/: check_doc_anchors.py  check_known_gaps.py  dvas-dev.ps1  generate_test_video.py  get_subsystem_status.py  run_e2e.py  test.ps1
src/dvas/: __init__.py  __main__.py  exceptions.py
src/dvas/api/: __init__.py  audit_log.py  auth.py  batch_api.py  dataset_api.py  dependencies.py  export_api.py  main.py  middleware.py  model_api.py  prompt_api.py  rate_limit.py  review_api.py  task_lifecycle.py  task_queue.py  task_store.py  tenant.py
src/dvas/benchmarks/: __init__.py  annotation_consistency.py  base.py  cost_quality_pareto.py  ego4d.py  epic_kitchens.py  human_agreement.py  latency_quality_pareto.py  long_video.py  nightly_report.py  open_x_embodiment.py  regression.py  student_leaderboard.py  synthetic_video.py  teacher_leaderboard.py
src/dvas/cli/: __init__.py  commands.py  dev.py  docs_info.py  migrate.py  quality.py  scaffold.py
tests/: test_actor.py  test_adaptive_sampler.py  test_algorithms.py  test_amp_utils.py  test_api_auth.py  test_api_endpoints.py  test_backpressure.py  test_batch_api.py  test_benchmark_annotation_consistency.py  test_benchmark_base.py  test_benchmark_cost_quality_pareto.py  test_benchmark_ego4d.py  test_benchmark_epic_kitchens.py  test_benchmark_human_agreement.py  test_benchmark_latency_quality_pareto.py  test_benchmark_long_video.py  test_benchmark_nightly_report.py  test_benchmark_open_x_embodiment.py  test_benchmark_regression.py  test_benchmark_student_leaderboard.py  test_benchmark_synthetic_video.py  test_benchmark_teacher_leaderboard.py  test_canary.py  test_checkpoint_resume.py  test_circuit_breaker.py  test_cli.py  test_contracts.py  test_decord_reader.py  test_deprecated.py  test_drift_detector.py  test_evaluator.py  test_export_adapters.py  test_feature_store.py  test_fsdp.py  test_fuzz.py  test_governance_approval_workflow.py  test_governance_data_governance.py  test_governance_policy_engine.py  test_governance_quality_gates.py  test_governance_standards.py  (+92 more)
tests/__snapshots__/: test_action_full.snap  test_action_minimal.snap  test_annotation_dict.snap  test_empty_annotation.snap  test_llava_format.snap  test_openai_format.snap  test_segment_with_qa.snap  test_video_metadata.snap
tests/alignment/: __init__.py  test_ego4d.py  test_epic_kitchens.py  test_open_x_embodiment.py
tests/e2e/: conftest.py  test_checkpoint_resume.py  test_failure_recovery.py  test_golden_path.py
tests/unit/: test_contracts_pytest.py  test_governance.py  test_lineage.py  test_schemas_pytest.py  test_world_model.py
(+237 files in other folders)
