[project]
name = "dvas"
version = "0.1.0"
description = "Distilled Video Annotation Specialist - AI-powered video annotation platform"
readme = "CLAUDE.md"
requires-python = ">=3.10"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # Video processing
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",

    # API clients
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # Storage (optional for now)
    "orjson>=3.9.0",

    # Scientific computing
    "scipy>=1.14.0",

    # Security
    "cryptography>=42.0.0",

    # Performance
    "aiofiles>=23.0.0",
    "aiocache>=0.12.0",
    "structlog>=24.1.0",

    # Templating
    "jinja2>=3.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[project.optional-dependencies]
video = [
    "decord>=0.6.0",
]
decord = [
    "decord>=0.6.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "jinja2>=3.1.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
train = [
    "transformers>=4.42.0",
    "datasets>=2.20.0",
    "accelerate>=0.31.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
]
redis = [
    "celery>=5.4.0",
    "redis>=5.0.0",
]
all = [
    "dvas[dev,api,train,redis]",
]

[project.scripts]
dvas = "dvas.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dvas*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/test_amp_utils.py" = ["E402"]
"tests/test_checkpoint_resume.py" = ["E402"]
"tests/test_decord_reader.py" = ["E402"]
"tests/test_validation_gate.py" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests that require GPU",
    "windows: marks tests that have known issues on Windows",
    "snapshot: marks snapshot comparison tests",
]

[tool.coverage.run]
source = ["src/dvas"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
